# qn-plugins

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
plugins/bsm/: test_bsm.py
plugins/bsm/bsm/: __init__.py  experiment.py
plugins/egp/: test_egp.py
plugins/egp/egp/: __init__.py  experiment.py
plugins/pingpong/: test_pingpong.py
plugins/pingpong/interpreter/: pingpong.py
plugins/pingpong/pingpong/: __init__.py  pingponger.py
plugins/spg/: test_spg.py
plugins/spg/spg/: __init__.py  experiment.py
